save fusion distance in variable

--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -4213,6 +4213,10 @@ dens_piek_lang <- ggplot_build(plot_dist_terr_lang)$data[[4]] %>%
 
 De top van de densiteitscurve van de koppelafstanden lag op `r round(dens_piek_lang, digits = 2)` m, de top van de histogram op `r hist_piek_lang` m, de mediaan op `r round(median(dst_lang[dst_lang != 0]), digits = 2)` m en het gemiddelde op `r round(mean(dst_lang[dst_lang != 0]), digits = 2)` m. Om conservatief te blijven kiezen we als fusieafstand het gemiddelde.
 
+```{r}
+fusie_afstand_lang <- mean(dst_lang[dst_lang != 0])
+```
+
 
 ### Data preparatie
 
